# greetd

./: CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  run-tests.sh
docker/: Cargo.toml  config.toml
docker/pam.d/: greetd-greeter
src/: config.rs  error.rs  ipc.rs  main.rs  session.rs  terminal.rs
