# Docker build Cargo.toml - no local path dependencies
[package]
name = "greetd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "greetd"
path = "src/main.rs"

[[bin]]
name = "test-greeter"
path = "src/bin/test-greeter.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["ioctl", "signal", "user", "fs", "mman", "process"] }
pam = "0.8"
thiserror = "2"
libc = "0.2"
